splunk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: splunk
  name: splunk
  namespace: splunk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: splunk
    spec:
      containers:
      - image: splunk/splunk:latest
        name: splunk
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
        resources: {}
status: {}
