splunk/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: splunk
  name: splunk
  namespace: splunk
spec:
  containers:
  - image: splunk/splunk:9.4
    name: splunk
    volumeMounts:
    - mountPath: /opt/splunk/etc
      name: splunk-etc
    - mountPath: /opt/splunk/var
      name: splunk-var
    - mountPath: /tmp/defaults
      name: splunk-default
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: splunk-etc
    persistentVolumeClaim:
      claimName: splunk-etc
  - name: splunk-var
    persistentVolumeClaim:
      claimName: splunk-var
  - name: splunk-default
    configMap:
      name: splunk-default
status: {}
