splunk/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: splunk
  name: splunk-web-svc
  namespace: splunk
spec:
  ports:
  - name: splunk-tcp-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: splunk
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: splunk
  name: splunk-hec-svc
  namespace: splunk
spec:
  ports:
  - name: splunk-tcp-8088
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: splunk
  type: ClusterIP
status:
  loadBalancer: {}
