splunk/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-ingress-web
  namespace: splunk
spec:
  ingressClassName: nginx
  rules:
    - host: splunk.k8s.ntslab.loc
      http:
        paths:
          - backend:
              service:
                name: splunk-web-svc
                port:
                  number: 8000
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-ingress-hec
  namespace: splunk
spec:
  ingressClassName: nginx
  rules:
    - host: splunk-hec.k8s.ntslab.loc
      http:
        paths:
          - backend:
              service:
                name: splunk-hec-svc
                port:
                  number: 8088
            path: /
            pathType: Prefix
