splunk/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: splunk-web-route
  namespace: splunk
spec:
  host: search.lnxnet.org
  path: "/" 
  to:
    kind: Service
    name: splunk-web
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: splunk-hec-route
  namespace: splunk
spec:
  host: hec.lnxnet.org
  path: "/" 
  to:
    kind: Service
    name: splunk-hec
